# snakeGL

./: CMakeLists.txt  README.md
include/: CMakeLists.txt  food.h  game.h  snake.h
include/glad/: glad.h
src/: CMakeLists.txt  food.cpp  game.cpp  glad.c  main.cpp  snake.cpp  test.cpp
